<resources>
    <string name="app_name">Chitransh App</string>
    <string name="title_activity_login">Login</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.
    </string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="active_jobs">Active JOBS</string>
    <string name="get_otp">Get OTP</string>
    <string name="submit_otp">Submit</string>
    <string name="SignUp">Sign UP</string>
    <string name="please_SignUp">Please Sign Up</string>
    <string name="transition_name">Shared Image View</string>
    <string name="enter_phno">Enter your Phone Number</string>
    <string name="enter_otp">Enter your OTP</string>
    <string name="login_phone">Enter your Phone No</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_nhiring">Job\nHiring</string>
    <string name="business_nregistration">Business\nRegistration</string>
    <string name="job_nposting">Job \nPosting</string>
    <string name="family">Family</string>
    <string name="welcome_to">Welcome to</string>
    <string name="chitransh_digital">Chitransh Digital!</string>
    <string name="recent_news">Recent News</string>
    <string name="in_your_city">In your city</string>
    <string name="write_a_comment">Write a comment...</string>
    <string name="choose_language">Choose Language/भाषा चुनें</string>
    <string name="Screen_proceed">Proceed with Phone Number</string>
    <string name="welcome_text"><b>Welcome to \n<font color='#620402'>Chitransh Digital</font></b></string>
    <string name="welcome_text_dashboard"><b>Welcome to <font color='#620402'>Chitransh Digital</font></b></string>
    <string name="address"><b>Address :</b></string>
    <string name="comp_address">Lajpat nagar, ram ajpat nagar, ram ajpat nagar, ram ajpat nagar, ram ajpat nagar, ram ajpat nagar, ram nagar, Bhopal</string>
    <string name="Submit">Submit</string>
    <string name="registration_success">Registration Successful! Welcome</string>
    <string name="date_format">dd-MM-yyyy</string>
    <string name="top_section_transition">Top_Section</string>
    <string name="Screen_proceed_familyID">Proceed with Family ID</string>
    <string name="login_username">Only for existing family members</string>
    <string name="login_via_otp">Login via OTP</string>
    <string name="login_via_familyID">Login via FamilyID</string>
    <string name="spinner2_prompt">City</string>
    <string name="spinner3_prompt">Type</string>
    <string name="Sign_up_warning">By Signing Up you are making a new family being a head yourself, \n If you just want to sign up as a member please login via Family Heads Contact</string>
    <string name="select_your_relation">Select your relation</string>
    <string name="any_details_want_to_mentioned">Any details want to mentioned</string>
    <string name="additional_details">Additional Details</string>
    <string name="insitute_name">Insitute Name</string>
    <string name="insitute">Insitute :</string>
    <string name="branch">Branch :</string>
    <string name="branch_name">Branch Name</string>
    <string name="major">Major</string>
    <string name="education_details">Education Details</string>
    <string name="position">Position</string>
    <string name="field">Field</string>
    <string name="job_field">Job Field :</string>
    <string name="job_details">Job Details</string>
    <string name="address_of_occupation">Address of Occupation</string>
    <string name="business_name">Business Name</string>
    <string name="business_contact">Business Contact</string>
    <string name="business_address">Business Address</string>
    <string name="business_description">Business Description</string>
    <string name="description">Description</string>
    <string name="business_type">Business Type</string>
    <string name="business_social_link">Business Social Link</string>
    <string name="link_optional">Link (optional)</string>
    <string name="add_image">Add Image</string>
    <string name="file_file_file">file/file/file</string>
    <string name="add_file">Add File</string>
    <string name="call_now">Call now</string>
    <string name="link">link</string>
    <string name="attachment">Attachment</string>
    <string name="owner_name">Owner Name</string>
    <string name="new_coupon">New Coupon</string>
    <string name="get_20_off_on_all_items">Get 20% off on all items</string>
    <string name="name">Name</string>
    <string name="your_name">Your Name</string>
    <string name="family_id">Family ID</string>
    <string name="create_family_id">Create Family ID</string>
    <string name="contact">Contact</string>
    <string name="blood_group">Blood Group</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="landmark">Landmark</string>
    <string name="karyakarni_optional">Karyakarni (optional)</string>
    <string name="karyakarni">Karyakarni</string>
    <string name="highest_education">Highest Education</string>
    <string name="course">Course</string>
    <string name="mention_your_course">Mention your course</string>
    <string name="job_post">Job Post</string>
    <string name="post">Post</string>
    <string name="job_department">Job Department</string>
    <string name="department">Department</string>
    <string name="job_employer">Job Employer</string>
    <string name="employer">Employer</string>
    <string name="job_location">Job Location</string>
    <string name="preview_information">Preview Information</string>
    <string name="check_your_information">Check Your Information</string>
    <string name="family_nregistration">Family \nRegistration</string>
    <string name="jobs">Jobs</string>
    <string name="view_nfamily">View \nFamily</string>
    <string name="view_nbusiness">View \nBusiness</string>
    <string name="please_enter_your_name_and_contact_no">Please enter your name and contact no</string>
    <string name="please_enter_your_name">Please enter your name</string>
    <string name="please_enter_your_contact_no">Please enter your contact no</string>
    <string name="please_enter_your_age">Please enter your age</string>
    <string name="please_enter_your_gender">Please enter your gender</string>
    <string name="please_enter_your_blood_group">Please enter your blood group</string>
    <string name="please_enter_your_state">Please enter your state</string>
    <string name="please_enter_your_city">Please enter your city</string>
    <string name="please_enter_your_occupation">Please enter your occupation</string>
    <string name="please_enter_your_education">Please enter your education</string>
    <string name="only_jpeg_jpg_png_gif_files_are_allowed">Only JPEG, JPG, PNG, GIF files are allowed</string>
    <string name="adding_your_details_as_family_head">Adding Your Details as Family Head ...</string>
    <string name="adding_your_image">adding your image ...</string>
    <string name="please_enter_a_valid_phone_number">Please enter a valid phone number</string>
    <string name="input_your_phone_number">Input your phone number</string>
    <string name="please_enter_otp">Please enter otp</string>
    <string name="verifying_otp">Verifying OTP..</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="please_enter_username_and_family_id">Please enter username and family ID</string>
    <string name="verifying_family_id">Verifying Family ID..</string>
    <string name="otp_sent">OTP sent</string>
    <string name="please_try_again">Please try again</string>
    <string name="sending_otp">Sending OTP..</string>
    <string name="error_otp_request_timed_out_please_try_again">Error: OTP request timed out. Please try again.</string>
    <string name="otp_request_timed_out_please_try_again">OTP request timed out. Please try again.</string>
    <string name="permission_is_required_to_send_notifications">Permission is required to send notifications</string>
    <string name="permission_required">Permission Required</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="grant">Grant</string>
    <string name="package2">package</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Please wait...</string>
    <string name="confirm_signout">Confirm SignOut</string>
    <string name="are_you_sure_you_want_to_signout">Are you sure you want to Signout?</string>
    <string name="sign_out">Sign out</string>
    <string name="head_cannot_be_deleted">Head cannot be deleted</string>
    <string name="please_enter_your_relation">Please enter your relation</string>
    <string name="please_select_state">Please select state</string>
    <string name="member_updated_successfully">Member Updated Successfully</string>
    <string name="updating">Updating</string>
    <string name="member_deleted_successfully">Member Deleted Successfully</string>
    <string name="deleting">Deleting</string>
    <string name="confirm_deletion">Confirm Deletion</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete %1$s?</string>
    <string name="delete">Delete</string>
    <string name="at_most_4_images_can_be_uploaded">at most 4 images can be uploaded</string>
    <string name="business_registered">Business Registered</string>
    <string name="registering_business">Registering Business...</string>
    <string name="view_businesses">View Businesses</string>
    <string name="search_business">search business</string>
    <string name="job_position">Job Position</string>
    <string name="INR">₹</string>
    <string name="apply">Apply</string>
    <string name="select_member_to_add_to_your_family">Select member to add to your family</string>
    <string name="wife">Wife</string>
    <string name="husband">Husband</string>
    <string name="son">Son</string>
    <string name="daughter">Daughter</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="other">Other</string>
    <string name="job_requirements">Job Requirements</string>
    <string name="job_description">Job Description</string>
    <string name="not_available">Not Available</string>
</resources>