<!-- relationship_selection.xml -->

<LinearLayout
    android:id="@+id/relationshipSelectionLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="8dp"
    android:background="@drawable/relationship_selection_background">



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_member_to_add_to_your_family"
        android:textSize="24sp"
        android:id="@+id/tv_member"
        android:layout_margin="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

    <!-- Add buttons for different relationship types -->
    <Button
        android:id="@+id/btnWife"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wife"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_brown"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btnHusband"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/husband"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_brown"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btnSon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/son"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_brown"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btnDaughter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/daughter"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_brown"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btnFather"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/father"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_brown"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btnMother"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mother"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_brown"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>
    <Button
        android:id="@+id/btnOther"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:textColor="@color/white"
        android:backgroundTint="@color/theme_brown"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

</LinearLayout>
