<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.jobs.BottomSheetFragment">

    <LinearLayout
        android:id="@+id/detailedJobLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_margin="8dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_expandedJobTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_position"
            android:textStyle="bold"
            android:textSize="22sp"
            android:maxLength="100"
            android:maxLines="2"
            android:textColor="@color/theme_brown"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginTop="12dp"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/baseline_location_city_24"
                android:textColor="@color/theme_brown"
                />
            <TextView
                android:id="@+id/jobExpandedLocation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:text="@string/job_location"
                android:textColor="@color/black"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:text="@string/INR"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/theme_brown"
                />
            <TextView
                android:id="@+id/jobExpandedSalary"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:text="@string/not_available"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/baseline_school_24"
                android:textColor="@color/theme_brown"
                />
            <TextView
                android:id="@+id/jobExpandedRequirements"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:text="@string/job_requirements"
                android:maxLines="1"
                android:maxLength="20"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:src="@drawable/call_24"
                />
            <TextView
                android:id="@+id/jobExpandedAllContact"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.8"
                android:text="@string/not_available"
                android:maxLines="1"
                android:maxLength="20"
                android:textColor="@color/black"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/tv_jobExpandedDescriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_description"
            android:layout_marginTop="32dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            />
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
            <TextView
                android:id="@+id/tvMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lorem_ipsum"
                android:scrollbars="vertical" />

        </androidx.core.widget.NestedScrollView>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            >
            <Button
                android:id="@+id/btn_jobCall"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:text="@string/contact"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/theme_brown"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />
            <View
                android:layout_width="0dp"
                android:layout_weight="0.2"
                android:layout_height="match_parent"
                />

            <Button
                android:id="@+id/btn_jobLink"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:text="@string/apply"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/theme_brown"
                android:layout_gravity="center"
                android:textColor="@color/white"
                />

        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="Comments"
            android:visibility="gone"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/commentRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_below="@id/detailedJobLayout"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:nestedScrollingEnabled="true"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        tools:listitem="@layout/comment_item" />


    <LinearLayout
        android:visibility="gone"
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/commentInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/write_a_comment"
            android:background="#F3F3F3"/>

        <ImageView
            android:id="@+id/submitComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_forward_24"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"/>
    </LinearLayout>

</RelativeLayout>


