<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    tools:context=".ui.Business.ViewBusinessActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">
        <ImageView
            android:id="@+id/view_business_back"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:src="@drawable/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintHorizontal_bias="0.005"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.08" />


        <TextView
            android:id="@+id/top"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:autoSizeTextType="uniform"
            android:text="@string/view_businesses"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.216"
            app:layout_constraintStart_toEndOf="@id/view_business_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etSearchBusiness"
            android:layout_width="0dp"
            android:layout_weight="9"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/curved_edittext_bg"
            android:hint="@string/search_business"
            android:padding="8dp"
            app:layout_constraintEnd_toStartOf="@+id/business_search_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_business_back" />

        <!-- Search Icon -->
        <ImageView
            android:id="@+id/business_search_icon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/baseline_search_24"
            app:layout_constraintBottom_toBottomOf="@id/etSearchBusiness"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/etSearchBusiness" />
    </LinearLayout>

    <!-- Second Dropdown TextView -->
    <LinearLayout
        android:id="@+id/llSpinner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/etSearchBusiness"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Spinner
            android:id="@+id/stateSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/curved_edittext_bg"
            android:prompt="@string/spinner2_prompt"/>

        <Spinner
            android:id="@+id/citySpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/curved_edittext_bg"
            android:prompt="@string/spinner3_prompt" />

        <Spinner
            android:id="@+id/typeSpinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/curved_edittext_bg"
            android:prompt="@string/spinner3_prompt"
            android:padding="6dp"
            android:entries="@array/spinner2_values" />
    </LinearLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBusiness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llSpinner2"
        tools:itemCount="5"
        tools:listitem="@layout/business_item_layout" />

</LinearLayout>